# djust

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  RETRO.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/actions/djust-playwright-server/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: pre-release-security-audit.yml  security-hotspot-check.yml  test.yml
.pipeline-templates/: README.md  bugfix-state.json  feature-state.json  ship-state.json
crates/djust_components/src/: lib.rs
crates/djust_core/src/: context.rs
crates/djust_live/: Cargo.toml
crates/djust_live/src/: lib.rs
crates/djust_templates/src/: filter_registry.rs  parser.rs  registry.rs  renderer.rs
crates/djust_templates/tests/: free_threaded_safety.rs
crates/djust_vdom/src/: diff.rs  lib.rs  patch.rs
crates/djust_vdom/tests/: test_diff_robustness_gaps.rs  wire_protocol_snapshot.rs
docs/: BEST_PRACTICES_AI.md  native-author-guide.md  native-widget-vocabulary.md
docs/adr/: 002-backend-driven-ui-automation.md  003-llm-provider-abstraction.md  004-undo-for-llm-driven-actions.md  005-consent-envelope-for-remote-control.md  006-ai-generated-uis-with-capture-and-promote.md  008-auto-generated-http-api-from-event-handlers.md  013-view-transitions-api-integration.md  014-sticky-liveview-autodetect.md  016-transport-runtime-interface.md  017-object-permission-lifecycle.md  019-liveview-native.md  021-automatic-spa-navigation.md  022-v1.1-code-quality-single-path-convergence.md  023-incremental-type-enforcement.md
docs/guides/: BEST_PRACTICES.md
docs/state-management/: STATE_MANAGEMENT_API.md
docs/strategy-sessions/: 2026-05-19-v1.1-readiness.md
docs/website/core-concepts/: templates.md
docs/website/getting-started/: core-concepts.md  first-liveview.md
docs/website/guides/: accessibility.md  activity.md  components.md  database-notifications.md  declarative-ux-attrs.md  document-metadata.md  hooks.md  large-lists.md  migrating-from-django-tenants.md  model-binding.md  navigation.md  reconnection.md  server-driven-ui.md  service-worker.md  state-primitives.md  streaming-markdown.md  streaming-render.md  template-cheatsheet.md  tutorials.md  uploads.md  virtual-lists.md
examples/demo_project/templates/: index.html
python/djust/: __init__.py  _context_provider.py  _rust.pyi  apps.py  checks.py  checks_css_proposal.py  cli.py  config.py  decorators.py  deploy_cli.py  dev_server.py  drafts.py  forms.py  formsets.py  frameworks.py  http_streaming.py  js.py  live_view.py  live_view.pyi  middleware.py  performance.py  permissions.py  presence.py  profiler.py  push.py  rate_limit.py  react.py  routing.py  runtime.py  rust_components.py  schema.py  serialization.py  session_utils.py  simple_live_view.py  sse.py  streaming.py  test_isolation.py  testing.py  utils.py  websocket.py  (+2 more)
python/djust/admin_ext/: __init__.py  adapters.py  apps.py  decorators.py  forms.py  options.py  plugins.py  progress.py  sites.py  views.py
python/djust/api/: auth.py  dispatch.py  openapi.py  registry.py  urls.py
python/djust/auth/: __init__.py  admin_views.py  core.py  djust_admin.py  mixins.py  social.py  views.py
python/djust/backends/: redis.py  registry.py
python/djust/checks/: accessibility.py  components.py  configuration.py  integrations.py  quality.py  security.py  templates.py  utils.py
python/djust/components/: __init__.py  apps.py  base.py  dependencies.py  function_component.py  icons.py  presets.py  registry.py  rust_handlers.py  server_event_toast.py  suspense.py  utils.py
python/djust/db/: decorators.py  notifications.py
python/djust/mcp/: server.py
python/djust/mixins/: async_work.py  components.py  context.py  flash.py  handlers.py  jit.py  layout.py  model_binding.py  page_metadata.py  post_processing.py  request.py  rust_bridge.py  template.py  waiters.py
python/djust/observability/: dry_run.py  middleware.py  sql.py  timings.py  views.py
python/djust/optimization/: cache.py  codegen.py  fingerprint.py  query_optimizer.py
python/djust/pwa/: manifest.py  mixins.py  storage.py  sync.py  utils.py
python/djust/renderers/: __init__.py  base.py  html.py  native.py  template_resolver.py  widgets.py
python/djust/scaffolding/: generator.py
python/djust/security/: __init__.py  attribute_guard.py  log_sanitizer.py  state_snapshot.py
python/djust/state_backends/: base.py  memory.py  redis.py  registry.py
python/djust/template/: backend.py  loaders.py  rendering.py  serialization.py
python/djust/template_tags/: __init__.py  client_config.py  flash.py  markdown.py  pwa.py  url.py  (+2 more)
python/tests/: test_audit_command.py  test_checks.py  test_csp_nonce_support.py  test_deploy_cli.py  test_djif_marker_preservation_1678.py  test_hotreload.py  test_liveview_request_framework_attr_1545.py  test_serialization_hardening.py  test_tutorial_mixin.py  test_type_stubs.py
scripts/: check-cross-iife-refs.mjs  check-doc-snippets.py  check-shared-git-config.sh  gen_vdom_diff_fixtures.py
tests/: conftest.py  redirect_mount_test_urls.py  test_check_doc_snippets.py  test_check_shared_git_config.py
tests/integration/: test_chunks_overlap.py  test_extends_head_initial_get_1801.py  test_sw_advanced_flow.py
tests/js/: _significant_tree.js  check-cross-iife-refs-1706.test.js  dj-input-modifier-warning-1999.test.js  dj_dialog.test.js  keyboard_nav.test.js  navigation.test.js  patch_sorting.test.js  ssr_hydration_morph_1724.test.js  state_snapshot_signed.test.js  sw_advanced.test.js  uploads.test.js  vdom_client_faithful_diff.test.js  virtual_list.test.js
tests/livefixtures/: kanban_tabs_view.py
tests/playwright/: test_browser_smoke.py  test_nav_hooks.py
tests/unit/: test_arm_recovery_helper_1645.py  test_async_recovery_html_1636.py  test_component_parent_communication.py  test_db_notifications.py  test_event_security.py  test_live_view.py  test_rust_firstof_cycle_named_safe_1692.py  test_server_push.py  test_sw_advanced.py  test_vdom_settext_mispath_1529.py
(+366 files in other folders)
