[workspace]
members = [
    "crates/djust_core",
    "crates/djust_templates",
    "crates/djust_vdom",
    "crates/djust_live",
    "crates/djust_components",
]
resolver = "2"

[workspace.package]
version = "1.1.0-rc.4"
edition = "2021"
authors = ["djust contributors"]
license = "MIT"
repository = "https://github.com/djust-org/djust"

[workspace.dependencies]
# PyO3 without extension-module (added per-crate as needed)
# PyO3 0.25+ adds native Python 3.14 support (0.24 hard-caps at 3.13)
# 0.29 fixes GHSA-36hh-v3qg-5jq4 (OOB read in nth/nth_back) +
# GHSA-chgr-c6px-7xpp (missing Sync bound on new_closure).
pyo3 = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for binary serialization
tokio = { version = "1.52", features = ["full"] }
ahash = "0.8"  # Faster hashing
dashmap = "6.2"  # Concurrent HashMap for template caching
indexmap = "2.13"  # HashMap that preserves insertion order
smallvec = "1.13"
regex = "1.12"
once_cell = "1.21"
thiserror = "2.0"
quick-xml = "0.36"
html5ever = "0.39"
markup5ever_rcdom = "0.39"
chrono = "0.4"  # DateTime handling for timesince filter

# Actor system dependencies
parking_lot = "0.12"  # Faster sync primitives
tracing = "0.1"  # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }  # PyO3 async bridge (matches pyo3 0.29)
bincode = "2.0"  # Internal message serialization
tokio-test = "0.4"  # Tokio testing utilities
uuid = { version = "1.23", features = ["v4", "serde"] }  # UUID for view identification (Phase 6)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
