[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "djust"
version = "1.0.3rc2"
description = "Phoenix LiveView-style reactive components for Django with Rust-powered performance. Real-time UI updates over WebSocket, no JavaScript build step required."
authors = [{name = "djust contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["django", "rust", "reactive", "server-side-rendering", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Dependency ceiling policy (#910):
# Every runtime/dev dependency pins an upper bound at the next major version
# to prevent uncontrolled major bumps during lockfile refreshes. This was
# introduced after PR #909, where a `Django>=4.2` constraint allowed `uv lock`
# to resolve to Django 6.x and break 4.2-compatible code paths. The ceiling
# is the next major that has not yet been validated against djust's test
# matrix (see `classifiers` above). Bumping a ceiling is a deliberate,
# reviewed change — not something lockfile refresh should do silently.
dependencies = [
    "Django>=4.2.29,<6",
    "channels[daphne]>=4.0.0,<5",
    "msgpack>=1.0.0,<2",
    "markdown>=3.0,<4",
    "nh3>=0.2,<1",
    # `djust deploy` is a first-class CLI command, so click + requests are
    # base deps rather than gated behind a `[deploy]` extra. Both are tiny
    # and ubiquitous; the `deploy` extra below is kept as a no-op alias for
    # back-compat with installers that already pin `djust[deploy]`.
    "click>=8.0,<9",
    "requests>=2.28,<3",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0,<9",
]
compression = [
    "zstandard>=0.22.0,<1",  # zstd compression for state backend
]
performance = [
    "orjson>=3.11.6,<4",
    "zstandard>=0.22.0,<1",
]
# ADR-007 Phase 4 — consolidated packages. Each extra is `pip install
# djust[<name>]`; the standalone `djust-<name>` PyPI packages are sunset
# (final v99.0.0 tag, DeprecationWarning on import, re-exports from
# djust.<name>). Migration guide: docs/website/guides/migration-from-standalone-packages.md
auth = []  # No extra deps beyond djust core
tenants = []  # No extra deps beyond djust core; use [tenants-redis] / [tenants-postgres] for backend-specific
tenants-redis = [
    "redis>=5.0.0,<9",
]
tenants-postgres = [
    "psycopg[binary]>=3.1,<4",
]
theming = []  # No extra deps beyond djust core
admin = []  # No extra deps beyond djust core
deploy = []  # Back-compat alias; click + requests now ship as base deps for `djust deploy`
components = [
    "markdown>=3.0,<4",
    "nh3>=0.2,<1",
]
# v0.5.7 (#820, #822) — object-storage upload backends. Optional; the
# contrib modules import cleanly without the SDK but raise ImportError
# with a clear hint when a signing/upload call is actually made.
s3 = [
    "boto3>=1.30,<2",
]
gcs = [
    "google-cloud-storage>=2.10,<4",
    "requests>=2.28,<3",
]
azure = [
    "azure-storage-blob>=12.19,<13",
]
all = [
    "djust[redis,compression,performance,admin,deploy,theming,components,s3,gcs,azure]",
]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0,<10",
    "pytest-django>=4.5,<6",
    "pytest-asyncio>=0.21,<2",
    "pytest-xdist>=3.0,<4",  # Parallel test execution
    "pytest-benchmark>=4.0.0,<6",  # Performance benchmarking
    "ruff>=0.1,<1",
    "mypy>=1.0,<3",
    "uvicorn[standard]>=0.30.0,<1",
    "redis>=5.0.0,<9",
    "watchdog>=3.0.0,<7",  # File system monitoring for hot reload
    "zstandard>=0.22.0,<1",  # Compression support
    "orjson>=3.11.6,<4",
    "click>=8.0,<9",  # Deploy CLI
    "requests>=2.28,<3",  # Deploy CLI
    "requests-mock>=1.11,<2",  # HTTP mocking for deploy CLI tests
    "mcp[cli]>=1.2.0,<2",  # djust.mcp server tests (test_mcp.py)
    "fakeredis>=2.20,<3",  # In-memory Redis for test_security_upload_resumable.py (closes #961)
]

[project.scripts]
djust = "djust.cli:main"
djust-deploy = "djust.deploy_cli:cli"

[project.urls]
Homepage = "https://djust.org"
Documentation = "https://djust.org/quickstart/"
Repository = "https://github.com/djust-org/djust"
Issues = "https://github.com/djust-org/djust/issues"
Changelog = "https://github.com/djust-org/djust/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "djust._rust"
python-source = "python"
bindings = "pyo3"
manifest-path = "crates/djust_live/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["python/tests", "python/djust/tests", "tests/unit", "tests/e2e", "tests/integration"]
pythonpath = [".", "examples/demo_project"]
DJANGO_SETTINGS_MODULE = "demo_project.settings"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/playwright",  # Manual tests, not for CI
    "--ignore=tests/js",  # JavaScript tests run with npm test
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmarks (run with pytest-benchmark)",
    "auth: marks tests for djust.auth module",
    "tenants: marks tests for djust.tenants module",
    "admin: marks tests for djust.admin_ext module",
    "theming: marks tests for djust.theming module",
    "components: marks tests for djust.components module",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
# Skip mark_safe warnings in components - this is a templating framework
# where mark_safe is expected and safe (content comes from trusted templates)
exclude_dirs = ["tests", "python/tests", "python/djust/tests"]
skips = ["B703", "B308"]  # mark_safe is expected in templates

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
    "ujson>=5.12.0",
    "pyopenssl>=26.0.0",
    "pyasn1>=0.6.3",
]

[tool.bandit.per_file_ignores]
# In components, mark_safe is used for trusted template output
"python/djust/components/*" = ["B703", "B308"]
"python/djust/live_view.py" = ["B703", "B308"]

[tool.ruff.lint.per-file-ignores]
"python/djust/components/**" = ["E402", "E741", "F841"]  # Pre-existing upstream lint
"python/djust/theming/**" = ["E741"]  # 'l' is idiomatic in HSL color code
"python/djust/theming/accessibility.py" = ["F524"]  # CSS in format strings
"python/djust/theming/build_themes.py" = ["E402"]  # Conditional imports after settings
"python/djust/tests/test_theming_*.py" = ["E741", "E402"]  # Upstream test conventions
